# Las-cicatrices_Cpp

./: CMakeLists.txt  README.md  calificaciones.md  criatura.cpp  criatura.h  criaturaPrueba.cpp  criaturaPrueba.h  diagrama.md  dragon.cpp  ecosistema.cpp  fantasma.cpp  main.cpp  mapa.cpp  mapa.h  nodo.cpp  nodo.h  volador.cpp  volador.h
Atributos/: criatura.cpp  criatura.h  fantasma.cpp  fantasma.h  regeneracion.cpp  regeneracion.h  volador.cpp
Criaturas/: criaturaPrueba.cpp  criaturaPrueba.h  dragon.cpp  dragon.h  enano.cpp  enano.h  gigante.cpp  gigante.h  hada.cpp  hada.h
Ecosistema/: ecosistema.cpp  ecosistema.h  mapa.cpp  mapa.h  nodo.cpp  nodo.h
