cmake_minimum_required(VERSION 3.30)
project(Las_cicatrices_Cpp)

set(CMAKE_CXX_STANDARD 20)

add_executable(Las_cicatrices_Cpp main.cpp
        nodo.cpp
        mapa.cpp
        mapa.h
        criaturaPrueba.cpp
        criaturaPrueba.h
        criatura.cpp
        criatura.h
        ecosistema.cpp
        ecosistema.h
)
